// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toggle should match enzyme mount snapshot 1`] = `
<Toggle
  isToggleOn={false}
  onToggle={[MockFunction]}
>
  <div>
    <p>
      Is toggled
      OFF
    </p>
    <button
      onClick={[Function]}
      type="button"
    >
      Toggle
    </button>
    <button
      onClick={[Function]}
      type="button"
    >
      Toggle ON
    </button>
    <button
      onClick={[Function]}
      type="button"
    >
      Toggle OFF
    </button>
  </div>
</Toggle>
`;

exports[`Toggle should match enzyme mount snapshot 2`] = `
<Toggle
  isToggleOn={true}
  onToggle={
    [MockFunction] {
      "calls": Array [
        Array [],
      ],
      "results": Array [
        Object {
          "isThrow": false,
          "value": undefined,
        },
      ],
    }
  }
>
  <div>
    <p>
      Is toggled
      ON
    </p>
    <button
      onClick={[Function]}
      type="button"
    >
      Toggle
    </button>
    <button
      onClick={[Function]}
      type="button"
    >
      Toggle ON
    </button>
    <button
      onClick={[Function]}
      type="button"
    >
      Toggle OFF
    </button>
  </div>
</Toggle>
`;

exports[`Toggle should match enzyme mount snapshot 3`] = `
<Toggle
  isToggleOn={false}
  onToggle={
    [MockFunction] {
      "calls": Array [
        Array [],
        Array [],
      ],
      "results": Array [
        Object {
          "isThrow": false,
          "value": undefined,
        },
        Object {
          "isThrow": false,
          "value": undefined,
        },
      ],
    }
  }
>
  <div>
    <p>
      Is toggled
      OFF
    </p>
    <button
      onClick={[Function]}
      type="button"
    >
      Toggle
    </button>
    <button
      onClick={[Function]}
      type="button"
    >
      Toggle ON
    </button>
    <button
      onClick={[Function]}
      type="button"
    >
      Toggle OFF
    </button>
  </div>
</Toggle>
`;

exports[`Toggle should match enzyme shallow snapshot 1`] = `
<div>
  <p>
    Is toggled
    OFF
  </p>
  <button
    onClick={[Function]}
    type="button"
  >
    Toggle
  </button>
  <button
    onClick={[Function]}
    type="button"
  >
    Toggle ON
  </button>
  <button
    onClick={[Function]}
    type="button"
  >
    Toggle OFF
  </button>
</div>
`;

exports[`Toggle should match enzyme shallow snapshot 2`] = `
<div>
  <p>
    Is toggled
    ON
  </p>
  <button
    onClick={[Function]}
    type="button"
  >
    Toggle
  </button>
  <button
    onClick={[Function]}
    type="button"
  >
    Toggle ON
  </button>
  <button
    onClick={[Function]}
    type="button"
  >
    Toggle OFF
  </button>
</div>
`;

exports[`Toggle should match enzyme shallow snapshot 3`] = `
<div>
  <p>
    Is toggled
    OFF
  </p>
  <button
    onClick={[Function]}
    type="button"
  >
    Toggle
  </button>
  <button
    onClick={[Function]}
    type="button"
  >
    Toggle ON
  </button>
  <button
    onClick={[Function]}
    type="button"
  >
    Toggle OFF
  </button>
</div>
`;

exports[`Toggle should match react-test-renderer snapshot 1`] = `
<div>
  <p>
    Is toggled
    OFF
  </p>
  <button
    onClick={[Function]}
    type="button"
  >
    Toggle
  </button>
  <button
    onClick={[Function]}
    type="button"
  >
    Toggle ON
  </button>
  <button
    onClick={[Function]}
    type="button"
  >
    Toggle OFF
  </button>
</div>
`;

exports[`Toggle should match react-test-renderer snapshot 2`] = `
<div>
  <p>
    Is toggled
    ON
  </p>
  <button
    onClick={[Function]}
    type="button"
  >
    Toggle
  </button>
  <button
    onClick={[Function]}
    type="button"
  >
    Toggle ON
  </button>
  <button
    onClick={[Function]}
    type="button"
  >
    Toggle OFF
  </button>
</div>
`;

exports[`Toggle should match react-test-renderer snapshot 3`] = `
<div>
  <p>
    Is toggled
    OFF
  </p>
  <button
    onClick={[Function]}
    type="button"
  >
    Toggle
  </button>
  <button
    onClick={[Function]}
    type="button"
  >
    Toggle ON
  </button>
  <button
    onClick={[Function]}
    type="button"
  >
    Toggle OFF
  </button>
</div>
`;
